# inno-scream

./: .gitignore  .pre-commit-config.yaml  QUALITY_REPORT.md  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.envs/api/: .env.example
.envs/bot/: .env.example
.github/workflows/: bandit.yml  lint.yml  maintainability.yml  reliability.yml
alembic/: env.py
alembic/versions/: b3d51cbecc45_initial.py  bcb78441c98a_screams_and_reactions.py
docker/: api.Dockerfile  bot.Dockerfile  docker-compose.yml
imgs/: bottest.jpg 
src/api/: .env.example  __init__.py  __main__.py  config.py  database.py  errors.py  models.py
src/api/analytics/: __init__.py  routes.py  schemas.py  service.py
src/api/memes/: __init__.py  routes.py  service.py
src/api/screams/: __init__.py  exceptions.py  routes.py  schemas.py  service.py
src/bot/: __init__.py  __main__.py
src/bot/config/: __init__.py  config.py
src/bot/services/: __init__.py
src/bot/services/innoscream/: __init__.py  client.py  models.py
tests/: conftest.py  locustfile.py
tests/api/: .env.test  conftest.py  test_config.py  test_database.py  test_errors.py  test_main.py  test_models.py
tests/api/analytics/: test_routes.py  test_service.py
tests/api/memes/: test_routes.py  test_service.py
tests/api/screams/: test_routes.py  test_service.py
tests/bot/: test_main.py
tests/bot/config/: test_config.py
tests/bot/services/innoscream/: test_client.py  test_models.py
