[project]
name = "InnoScream"
version = "0.1.0"
description = "Anonymous stress relief Telegram-based platform for students"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[tool.poetry]
packages = [
    { include = "api", from = "src" },
    { include = "bot", from = "src" }
]

[tool.poetry.dependencies]
httpx = "^0.28.1"
pydantic = "^2.11.4"

[tool.poetry.group.api.dependencies]
fastapi = "0.115.12"
sqlalchemy = "^2.0.40"
alembic = "^1.15.2"
uvicorn = "^0.34.2"
aiosqlite = "^0.21.0"

[tool.poetry.group.bot.dependencies]
aiogram = "3.20.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
flake8 = "^7.2.0"
pytest = "^8.3.5"
