[project]
name = "InnoScream"
version = "0.1.0"
description = "Anonymous stress relief Telegram-based platform for students"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
pydantic-settings = "^2.9.1"

[tool.poetry.group.api.dependencies]
fastapi = "0.115.12"
sqlalchemy = "^2.0.40"
alembic = "^1.15.2"
uvicorn = "^0.34.2"
aiosqlite = "^0.21.0"
httpx = "^0.28.1"
pydantic = "^2.11.4"
beautifulsoup4 = "^4.13.4"
pillow = "^11.2.1"
greenlet = "^3.2.3"

[tool.poetry.group.bot.dependencies]
aiogram = "3.20.0"
logging = "^0.4.9.6"
requests = "^2.32.3"
pydantic-settings = "^2.2.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
flake8 = "^7.2.0"
pytest = "^8.3.5"
pytest-asyncio = "^0.23.5"
pytest-cov = "^6.1.1"
mutmut = "^2.4.4"
bandit = "^1.7.8"
locust = "^2.24.0"
